[tool.poetry]
name = "chaos-calculus"
version = "0.1.0"
description = "UI and Toolkit to mess around with Stable Diffusion."
authors = ["opcode0x90 <opcode0x90.nop@gmail.com>"]

[tool.poetry.scripts]
chaos = 'chaos_calculus.scripts.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.1.3"
matplotlib = "^3.6.0"

[tool.poetry.group.text2image-keras.dependencies]
keras-cv = "^0.3.3"
tensorflow = { version = "^2.10.0", platform = "win32" }
tensorflow-macos = { version = "^2.10.0", platform = "darwin" }
tensorflow-datasets = "^4.6.0"
pyreadline3 = { version = "^3.4.1", platform = "win32" }
gnureadline = {version = "^8.1.2", platform = "darwin"}


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
