[tool.poetry]
name = "chaos-calculus"
version = "0.1.0"
description = "UI and Toolkit to mess around with Stable Diffusion."
authors = ["opcode0x90 <opcode0x90.nop@gmail.com>"]

[tool.poetry.scripts]
chaos = 'chaos_calculus.scripts.cli:main'

[tool.poetry.dependencies]
python = { version = ">=3.10,<3.11", source = "pypi"}
click = { version = "^8.1.3", source = "pypi"}
matplotlib = { version = "^3.6.0", source = "pypi"}
pyreadline3 = { version = "^3.4.1", platform = "win32", source = "pypi"}
gnureadline = { version = "^8.1.2", platform = "darwin", source = "pypi"}

[tool.poetry.group.text2img-pytorch.dependencies]
torch = { version = "^1.13.0+cu117", source = "pytorch"}
diffusers = { version = "^0.6.0", source = "pypi"}
transformers = { version = "^4.23.1", source = "pypi"}
scipy = { version = "^1.9.3", source = "pypi"}
ftfy = { version = "^6.1.1", source = "pypi"}

[tool.poetry.group.text2img-keras.dependencies]
keras-cv = { version = "^0.3.3", source = "pypi"}
tensorflow = { version = "^2.10.0", platform = "win32", source = "pypi"}
tensorflow-macos = { version = "^2.10.0", platform = "darwin", source = "pypi"}
tensorflow-datasets = { version = "^4.6.0", source = "pypi"}


[tool.poetry.group.dev.dependencies]
mypy = { version =  "^0.981", source = "pypi"}
yapf = { version = "^0.32.0", source = "pypi"}
toml = { version = "^0.10.2", source = "pypi"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
